[package]
name = "healthcheck"
version = "0.1.0"
authors = ["EmperDeon <emperdeon@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = '^2.3'
dotenv = "^0.15.0"
chrono = "^0.4.19"

redis = { version = "^0.20.0", default-features = false }
amiquip = { version = "^0.4.0", default-features = false }
postgres = { version = "^0.19.0", default-features = false }
ureq = "^2.1.1"
